@@ -1,4 +1,4 @@
-.TH HDPARM 8 "December 2008" "Version 9.6"
+.TH HDPARM 8 "January 2009" "Version 9.7"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
